# esp-platform

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  build.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32.debug  sdkconfig.defaults.esp32s2.debug  sdkconfig.defaults.esp32s3.debug
.claude/: settings.json
.claude/commands/: flash.md  new-module.md
.claude/hooks/: check-sdkconfig.sh  remind-module-registration.sh  warn-set-target.sh
.github/workflows/: build.yml
components/: Kconfig.inc
components/cfg_ctrl/: CMakeLists.txt  Kconfig.inc  cfg_ctrl.c
components/cfg_ctrl/include/: cfg_ctrl.h
components/cli_ctrl/: CMakeLists.txt  Kconfig.inc  cli_ctrl.c
components/cli_ctrl/include/: cli_ctrl.h
components/eth/: CMakeLists.txt  Kconfig.projbuild  eth_ctrl.c
components/eth/include/: eth_ctrl.h
components/eth_ctrl/: CMakeLists.txt  Kconfig.inc  eth_ctrl.c
components/eth_ctrl/include/: eth_lut.h
components/gpio_ctrl/: CMakeLists.txt  Kconfig.inc  gpio_ctrl.c
components/lcd_ctrl/: CMakeLists.txt  Kconfig.inc  idf_component.yml  ili9341v.c  lcd_ctrl.c  lcd_helper.c  lcd_hw.c  ns2009.c
components/lcd_ctrl/include/: ili9341v.h  lcd_defs.h  ns2009.h
components/manager/: CMakeLists.txt  Kconfig.projbuild  manager.c
components/manager/include/: manager.h  mgr_reg.h  mgr_reg_list.h
components/messages/: CMakeLists.txt  msg.c
components/messages/include/: msg.h
components/mgr_ctrl/: CMakeLists.txt  Kconfig.inc  mgr_ctrl.c
components/mqtt_ctrl/: CMakeLists.txt  Kconfig.inc  mqtt_ctrl.c
components/mqtt_ctrl/include/: mqtt_ctrl.h
components/msg_ctrl/include/: msg.h
components/relay_ctrl/: CMakeLists.txt  Kconfig.inc  relay_ctrl.c
components/relay_ctrl/include/: relay_ctrl.h
components/sys_ctrl/: CMakeLists.txt  Kconfig.inc  sys_ctrl.c
components/sys_ctrl/include/: sys_ctrl.h
components/template/: CMakeLists.txt  template_ctrl.c
components/template/include/: template_ctrl.h
components/template_ctrl/: CMakeLists.txt  Kconfig.inc  template_ctrl.c
config/: partitions-esp32.csv
docs/: ARCHITECTURE.md  BOARD.md  CFG_CTRL.md  CLI_CTRL.md  COAP_CTRL.md  ETH_CTRL.md  GPIO_CTRL.md  LCD.md  LCD_CTRL.md  MCU.md  MQTT_CTRL.md  PARSE_MEM_LOG.md  RELAY_CTRL.md  SENSOR_CTRL.md  SYS_CTRL.md  TEMPLATE_CTRL.md  WIFI.md  WIFI_CTRL.md  architecture.md  build.md  memory.md  mqtt.md  parse_mem_log.md
docs/todo/: COAP.md  LCD.PL.md  LCD.md
drivers/tsl2561/: CMakeLists.txt  Kconfig
drivers/tsl2561/include/: tsl2561.h
drivers/tsl2561/src/: tsl2561.c  tsl2561_lux.h  tsl2561_reg.h  tsl2561_type.h
include/: data.h  data_types.h  data_wifi.h  err.h  lut.h  mem.h  mem_check.h  mgr_ctrl.h  mgr_reg.h  mgr_reg_list.h  msg.h  nvs_ctrl.h  tags.h  tools.h  types.h
main/: CMakeLists.txt  Kconfig.cfg  Kconfig.cli  Kconfig.eth  Kconfig.gpio  Kconfig.level  Kconfig.main  Kconfig.mgr  Kconfig.mqtt  Kconfig.power  Kconfig.projbuild  Kconfig.relay  Kconfig.sys  Kconfig.tools  main.c  mem.c  mem_check.c  mgr_ctrl.c  nvs_ctrl.c  tools.c
modules/: Kconfig.inc
modules/cfg_ctrl/: CMakeLists.txt  Kconfig.inc  cfg_ctrl.c
modules/cli_ctrl/: CMakeLists.txt  Kconfig.inc  cli_ctrl.c  cli_lcd.c  cli_wifi.c
modules/cli_ctrl/include/: cli_ctrl.h  cli_lcd.h  cli_wifi.h
modules/eth_ctrl/: CMakeLists.txt  Kconfig.inc  eth_ctrl.c
modules/eth_ctrl/include/: eth_ctrl.h
modules/gpio_ctrl/: CMakeLists.txt  Kconfig.inc  gpio_ctrl.c
modules/gpio_ctrl/include/: gpio_ctrl.h
modules/lcd_ctrl/: CMakeLists.txt  Kconfig.inc  ili9341v.c  lcd_ctrl.c  lcd_helper.c  lcd_hw.c  ns2009.c
modules/lcd_ctrl/fonts/: gen_material_icons_font.sh  lv_font_material_icons_22.c
modules/lcd_ctrl/include/: ili9341v.h  lcd_ctrl.h  lcd_defs.h  lcd_helper.h  lcd_hw.h  ns2009.h
modules/lcd_ctrl/ui/: ui_eth_info_dialog.c  ui_eth_info_dialog.h  ui_main_screen.c  ui_main_screen.h  ui_material_icons.h  ui_mqtt_info_dialog.c  ui_mqtt_info_dialog.h  ui_screensaver.c  ui_screensaver.h  ui_theme_dialog.c  ui_theme_dialog.h  ui_wifi_info_dialog.c  ui_wifi_info_dialog.h
modules/mqtt_ctrl/: CMakeLists.txt  Kconfig.inc  mqtt_ctrl.c
modules/mqtt_ctrl/include/: mqtt_lut.h
modules/relay_ctrl/: CMakeLists.txt  relay_ctrl.c
modules/relay_ctrl/include/: relay_ctrl.h
modules/sensor_ctrl/: CMakeLists.txt  Kconfig.inc  sensor_ctrl.c  sensor_tsl2561.c
modules/sensor_ctrl/include/: sensor_ctrl.h  sensor_data.h  sensor_list.h  sensor_lut.h  sensor_reg.h  sensor_tsl2561.h
modules/sensors_ctrl/: CMakeLists.txt  Kconfig.inc  sensor_tsl2561.c  sensors_ctrl.c
modules/sensors_ctrl/include/: sensor_tsl2561.h  sensors_ctrl.h
modules/sys_ctrl/: CMakeLists.txt  Kconfig.inc  sys_ctrl.c
modules/sys_ctrl/include/: sys_lut.h
modules/template_ctrl/: CMakeLists.txt  Kconfig.inc  template_ctrl.c
modules/template_ctrl/include/: template_ctrl.h
modules/wifi_ctrl/: CMakeLists.txt  Kconfig.inc  wifi_ctrl.c
modules/wifi_ctrl/include/: wifi_ctrl.h
scripts/: parse_mem_log.py
